tests/pragmas/tfatal.nim
discard """
  errormsg: "user message"
"""
{.fatal:"user message".}
